# snake

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  pages.yml  release-plz.yml  release.yml
src/: cli.rs  engine.rs  game.rs  grid.rs  grid_geometry.rs  lib.rs  main.rs  raw_mode_guard.rs  renderer.rs  snake.rs  terminal.rs
src/application/: mod.rs
src/domain/: game.rs  grid.rs  grid_geometry.rs  mod.rs  snake.rs
src/infrastructure/: mod.rs  raw_mode_guard.rs  terminal.rs  web.rs
src/presentation/: cli.rs  mod.rs  renderer.rs
tests/: grid_geometry_test.rs  grid_test.rs  snake_test.rs
web/: index.html  main.js  manifest.webmanifest  style.css
