[package]
name = "snake"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
